This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
12/1/25: Fixed crash in startup when there is a plugin STEM camera.

11/26/25: Added script command to get all parameters for a low dose area into
an array variable.

11/25/25: Added ability to show STEM channels in multiple, separate windows to
the right of the main window, similar to the side-by-side FFT display.  This
is controlled from a dialog opened from the Window menu.

11/21/25: Added support for Dark mode for K3 cameras.

11/21/25: Fixed frame alignment for DE cameras to account for frames now being
saved at requested subarea size and binning instead of full-sized.

11/21/25: Added support for HDR Counting in DE cameras.

11/20/25: Made it request insertion only once for Gatan cameras and then wait
until inserted; repeated requests wasted time and caused timeouts with K3.

11/20/25: Fixed SEMCCD plugin crashing DM when first saved raw images from K3
are binned by 2 and from a subarea (In 4.2).

11/20/25: Fixed finishing focus ramp for TVIPS STEM, and requesting more than
one channel in continuous mode for FEI STEM through UTAPI (In 4.2).

11/14/25: Fixed adding grid of point "like last time" not setting items as
Acquire (In 4.2).

11/14/24: Added support for Tietz XF216 camera (In 4.2).

11/14/24: Made Shift to Marker work with groups collapsed if current point is
the only one in the group (In 4.2).

11/13/25: Added script command to get JEOL aperture sizes for a given aperture
index.

11/12/25: SEM_4-3-0beta2
11/12/25: Added EDM dose percentage to imaging states.

11/11/25: Added property to set magnification below which "autofocus" will set
standard focus instead of autofocusing, even when calibrated.

11/11/25: Implemented frame saving and aligning for JEOL cameras.
